@@ -61,4 +61,8 @@ extern char** ARGV;
 
 extern psk m0, m1, f0, f1, f4, f5;
 
+#define NARROWLINELENGTH 80
+#define WIDELINELENGTH 120
+static int LINELENGTH;
+
 #endif
